--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -307,3 +307,18 @@
         </li>
     </ul>
 </section>
+
+<section id="demos"
+         aria-label="demos">
+
+    <h2>Demos</h2>
+
+    <p>
+        Just some faffing about
+    </p>
+
+    <ul>
+        <li><a href="~/app/junk">Junk</a></li>
+    </ul>
+
+</section>
