--- a/Personal Site/Pages/_ViewImports.cshtml
+++ b/Personal Site/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SeanMcBeth
 @namespace SeanMcBeth.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Juniper.Server
