fix spurious semicolon character

--- a/Personal Site/Pages/Shared/_Layout.cshtml
+++ b/Personal Site/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
         <meta name="keywords" content="@ViewData["Keywords"]" />
     }
     <link rel="stylesheet" type="text/css" href="~/css/index.css">
-    @RenderSection("Head", required: false);
+    @RenderSection("Head", required: false)
 </head>
 
 <body>
