--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -5,7 +5,8 @@
 }
 
 @section Head {
-<bundle-js name="@(Model.Name + "-app")" versioned />
+    <bundle-js name="three" versioned />
+    <bundle-js name="@(Model.Name + "-app")" versioned />
 }
 
 @Html.AntiForgeryToken()
