--- a/Personal Site/wwwroot/css/index.css
+++ b/Personal Site/wwwroot/css/index.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Segoe UI Emoji";
+    src: local("Segoe UI Emoji"), url("../fonts/seguiemj.ttf") format("truetype");
+}
+
 * {
   box-sizing: border-box;
 }
