--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -70,15 +70,15 @@
         <li><a href="https://github.com/capnmidnight/pliny" target="_blank" rel="noopener">Pliny: a live-documentation system for JavaScript projects</a>:</li>
         <li><a href="https://www.youtube.com/watch?v=9_6_w-dXVw0" target="_blank" rel="noopener">Electron/WebRTC app for screen sharing and web app collaboration</a>:</li>
         <li><a href="https://www.bloomberg.com/news/articles/2016-12-06/goldman-sachs-alum-turns-to-virtual-reality-to-sell-57-million-mansion" target="_blank" rel="noopener">REX</a>: 360° Real Estate Tours</li>
-        <li><a href="yabs.html" target="_blank" rel="noopener">No More Jabber Yabs</a>: A game about the consequences of following orders.</li>
-        <li><a href="http://www.highlandfrs.com" target="_blank" rel="noopener">Highland Solutions</a>: a consultancy for helping people wrangle their data</li>
+        <li><a href="~/app/yabs" target="_blank" rel="noopener">No More Jabber Yabs</a>: A game about the consequences of following orders.</li>
+        <li><a href="http://www.highlandas.com" target="_blank" rel="noopener">Highland Solutions</a>: a consultancy for helping people wrangle their data</li>
         <li><a href="https://www.youtube.com/watch?v=5SXsu_MEzmU" target="_blank" rel="noopener">Genetic algorithm visualizer</a>:</li>
-        <li><a href="https://www.justwritedammit.com/" target="_blank" rel="noopener">Just Write, Dammit!</a>: A book writing platform</li>
+        <li><a href="~/archive/jwd" target="_blank" rel="noopener">Just Write, Dammit!</a>: A book writing platform</li>
         <li><a href="https://www.youtube.com/watch?v=KcDqzLGkre4&amp;feature=youtu.be&amp;t=43" target="_blank" rel="noopener">Rieker CARS</a>: DOT-compliant road sign recommendations</li>
         <li><a href="https://github.com/capnmidnight/small-town" target="_blank" rel="noopener">Small Town</a>: interactive fiction + AI Shakespere</li>
         <li><a href="https://github.com/capnmidnight/SqlSiphon" target="_blank" rel="noopener">SqlSiphon</a>: a database management library for .NET</li>
-        <li><a href="html5/pong/" target="_blank" rel="noopener">Mobile-responsive Pong game</a>:</li>
-        <li><a href="html5/synth/" target="_blank" rel="noopener">Scratch Live!</a>: An HTML 5 synthesizer</li>
+        <li><a href="~/archive/html5/pong" target="_blank" rel="noopener">Mobile-responsive Pong game</a>:</li>
+        <li><a href="~/archive/html5/synth" target="_blank" rel="noopener">Scratch Live!</a>: An HTML 5 synthesizer</li>
     </ul>
     <h3>Photography and Writing</h3>
     <ul>
@@ -99,5 +99,27 @@
         <li>President for Shippensburg University's student ACM chapter.</li>
         <li>Vice-President for Shippensburg University's programming team.</li>
         <li>President for Penn State Mont Alto's engineering club.</li>
+    </ul>
+</section>
+
+<section id="archive"
+         aria-label="archive of really old projects">
+    <h2>Archive</h2>
+
+    <p>
+        Some really old projects that I just like to keep around and look at from time to time.
+    </p>
+
+    <ul>
+        <li><a href="~/archive/3hgdc">3hgdc</a></li>
+        <li><a href="~/archive/html5/brian">brian</a></li>
+        <li><a href="~/archive/html5/epa">epa</a></li>
+        <li><a href="~/archive/html5/web-chess">chess</a></li>
+        <li><a href="~/archive/research/dhtml/render">sprites</a></li>
+        <li><a href="~/archive/research/dhtml/render/render.html">render</a></li>
+        <li><a href="~/archive/research/dhtml/slidebar">slidebar</a></li>
+        <li><a href="~/archive/research/mapping">mapping</a></li>
+        <li><a href="~/archive/research/optical_illusions">optical_illusions</a></li>
+        <li><a href="~/archive/research/testing">testing</a></li>
     </ul>
 </section>
