only load Three.js if a file asks for it

--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -5,7 +5,10 @@
 }
 
 @section Head {
-    <bundle-js name="three" versioned />
+    @if (Model.IncludeThreeJS)
+    {
+        <bundle-js name="three" versioned />
+    }
     <bundle-js name="@(Model.Name + "-app")" versioned />
 }
 
