--- a/Personal Site/wwwroot/css/index.css
+++ b/Personal Site/wwwroot/css/index.css
@@ -86,6 +86,7 @@ h2::after {
   font-family: monospace;
   border-bottom: solid 2px #000;
   background-color: #fff;
+  z-index: 3;
 }
 #menu ul {
   list-style-type: none;
