--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -18,15 +18,14 @@
     </ul>
     <h2><a name="profiles">Online Profiles</a></h2>
     <ul>
-        <li><a href="https://github.com/capnmidnight" target="_blank" rel="noopener">Github</a>:</li>
-        <li><a href="https://www.npmjs.com/~seanmcbeth" target="_blank" rel="noopener">NPM</a>:</li>
-        <li><a href="https://www.youtube.com/user/moron4hire" target="_blank" rel="noopener">YouTube</a>:</li>
-        <li><a href="https://codepen.io/SeanMcBeth/" target="_blank" rel="noopener">CodePen</a>:</li>
-        <li><a href="https://mastodon.cloud/@@SeanMcBeth" target="_blank" rel="noopener">Mastodon</a>:</li>
-        <li><a href="http://sean-mcbeth.tumblr.com" target="_blank" rel="noopener">Tumblr blog</a>:</li>
-        <li><a href="https://news.ycombinator.com/user?id=moron4hire" target="_blank" rel="noopener">Hacker News</a>:</li>
-        <li><a href="https://www.crunchbase.com/person/sean-mcbeth#/entity" target="_blank" rel="noopener">CrunchBase</a>:</li>
-        <li><a href="http://www.imdb.com/name/nm5111059/" target="_blank" rel="noopener">IMDB (yup)</a>:</li>
+        <li><a href="https://twitter.com/Sean_McBeth" target="_blank" rel="noopener">Twitter</a></li>
+        <li><a href="https://github.com/capnmidnight" target="_blank" rel="noopener">Github</a></li>
+        <li><a href="https://news.ycombinator.com/user?id=moron4hire" target="_blank" rel="noopener">Hacker News</a></li>
+        <li><a href="https://mastodon.cloud/@@SeanMcBeth" target="_blank" rel="noopener">Mastodon</a></li>
+        <li><a href="https://www.npmjs.com/~seanmcbeth" target="_blank" rel="noopener">NPM</a></li>
+        <li><a href="https://www.youtube.com/user/moron4hire" target="_blank" rel="noopener">YouTube</a></li>
+        <li><a href="https://codepen.io/SeanMcBeth/" target="_blank" rel="noopener">CodePen</a></li>
+        <li><a href="http://www.imdb.com/name/nm5111059/" target="_blank" rel="noopener">IMDB (yup)</a></li>
     </ul>
     <h2><a name="projects">Past Projects</a></h2>
     <p>Here are some of the projects I had worked on in the past, that are either now finished or defunct.</p>
