--- a/Personal Site/wwwroot/css/index.css
+++ b/Personal Site/wwwroot/css/index.css
@@ -45,7 +45,7 @@ h2::after {
 }
 .icon {
   display: inline-block;
-  background-image: url("icons.min.png");
+  background-image: url("/img/icons.min.png");
   background-repeat: no-repeat;
   background-size: 100%;
   width: 25px;
