--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -5,8 +5,15 @@
 }
 
 @section Head {
+    <meta property="og:site_name" content="Sean T. McBeth - @Model.Name">
+    <meta property="og:image" content="@Model.ThumbnailPath" data-rh="true">
     <bundle-js name="three" versioned />
     <bundle-js name="@(Model.Name + "-app")" versioned />
+    <style>
+        body{ 
+            background: fixed center/cover url(@Model.ThumbnailPath);
+        }
+    </style>
 }
 
-@Html.AntiForgeryToken()
+    @Html.AntiForgeryToken()
