twitter card junk

--- a/Personal Site/Pages/Shared/_Layout.cshtml
+++ b/Personal Site/Pages/Shared/_Layout.cshtml
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
-<html lang="en-us"  prefix="og: http://ogp.me/ns#">
+<html lang="en-us" prefix="og: http://ogp.me/ns#">
 
 <head>
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
     <meta name="viewport" content="width=device-width, shrink-to-fit=0, initial-scale=1.0" />
-    <meta name="twitter:creator" content="@@Sean_McBeth">
-    <meta property="og:site_name" content="Sean T. McBeth's Personal Site">
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:site_name" content="Sean T. McBeth's Personal Site" />
+    <meta name="twitter:site" content="@@Sean_McBeth" />
+    <meta name="twitter:title" content="@ViewData["Title"]" />
+    <meta property="og:title" content="@ViewData["Title"]" />
     @if (ViewData["Keywords"] is not null)
     {
         <meta name="keywords" content="@ViewData["Keywords"]" />
