--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -5,11 +5,12 @@
 }
 
 @section Head {
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="https://seanmcbeth.com/@Model.ThumbnailPath" data-rh="true">
-    <meta property="og:title" content="Sean T. McBeth - @Model.Name">
+    <meta property="og:image" content="https://seanmcbeth.com/@Model.ThumbnailPath">
+    <meta property="og:url" content="https://seanmcbeth.com/app/@Model.Name">
     @if (Model.Description is not null)
     {
+        <meta name="twitter:image:alt" content="@Model.Description">
+        <meta name="twitter:description" content="@Model.Description">
         <meta property="og:description" content="@Model.Description">
     }
     <bundle-js name="three" versioned />
