more opengraph stuff

--- a/Personal Site/Pages/Shared/_Layout.cshtml
+++ b/Personal Site/Pages/Shared/_Layout.cshtml
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
     <meta name="viewport" content="width=device-width, shrink-to-fit=0, initial-scale=1.0" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:site_name" content="Sean T. McBeth's Personal Site" />
+    <meta property="og:locale" content="en_US">
     <meta name="twitter:site" content="@@Sean_McBeth" />
     <meta name="twitter:title" content="@ViewData["Title"]" />
     <meta property="og:title" content="@ViewData["Title"]" />
