--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -5,12 +5,15 @@
 }
 
 @section Head {
+    <meta property="og:type" content="website">
+    <meta name="twitter:image" content="https://seanmcbeth.com/@Model.ThumbnailPath">
     <meta property="og:image" content="https://seanmcbeth.com/@Model.ThumbnailPath">
     <meta property="og:url" content="https://seanmcbeth.com/app/@Model.Name">
     @if (Model.Description is not null)
     {
         <meta name="twitter:image:alt" content="@Model.Description">
         <meta name="twitter:description" content="@Model.Description">
+        <meta property="og:image:alt" content="@Model.Description">
         <meta property="og:description" content="@Model.Description">
     }
     <bundle-js name="three" versioned />
