why why why why why why why?!?!?!?!

--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -7,7 +7,7 @@
 @section Head {
     <meta property="og:type" content="website">
     <meta name="twitter:image" content="https://seanmcbeth.com@Model.ThumbnailPath">
-    <meta property="og:image" content="https://seanmcbeth.comModel.ThumbnailPath">
+    <meta property="og:image" content="https://seanmcbeth.com@Model.ThumbnailPath">
     <meta property="og:url" content="https://seanmcbeth.com/app/@Model.Name">
     @if (Model.Description is not null)
     {
