--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Sean T. McBeth: engineer, photographer, mad scientist";
     ViewData["Keywords"] = "software development, software engineering, programming, freelancing, Sean T. McBeth, embedded programming, virtual reality, agumented reality, VR, AR, 3D, graphics programming, game development, simulation, abstract data visualization, audio synthesis, signals processing, computer vision, peer-to-peer, networking, desktop software, Web applications, mobile apps, WebRTC, hardware, embedded systems, reporting, GIS, databases";
+    ViewData["Description"] = "Sean T. McBeth is the head of Immersive Software Development at Diplomatic Language Services.";
 }
 
 @section Menu {
@@ -115,7 +116,6 @@
         <h2>Bio</h2>
 
         <p>
-            <a href="https://www.dlsdc.com">I work at Diplomatic Language Services</a>, where I am the head of Immersive Software Development. As a senior software architect, I build virtual and augmented reality games, training simulations, and abstract data visualizations. Audio synthesis and processing, computer vision, peer-to-peer networking, real-time communication, hardware prototyping, and Geographic Information Systems (<abbr>GIS</abbr>) are other areas in which I work. I've worked across the range of desktop, Web, mobile, embedded systems, and relational database systems.
         </p>
 
         <p>
