--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -25,7 +25,7 @@
         <li><a href="https://www.npmjs.com/~seanmcbeth" target="_blank" rel="noopener">NPM</a></li>
         <li><a href="https://www.youtube.com/user/moron4hire" target="_blank" rel="noopener">YouTube</a></li>
         <li><a href="https://codepen.io/SeanMcBeth/" target="_blank" rel="noopener">CodePen</a></li>
-        <li><a href="http://www.imdb.com/name/nm5111059/" target="_blank" rel="noopener">IMDB (yup)</a></li>
+        <li><a href="https://www.imdb.com/name/nm5111059/" target="_blank" rel="noopener">IMDB (yup)</a></li>
     </ul>
     <h2><a name="projects">Past Projects</a></h2>
     <p>Here are some of the projects I had worked on in the past, that are either now finished or defunct.</p>
