--- a/Personal Site/Pages/VR.cshtml
+++ b/Personal Site/Pages/VR.cshtml
@@ -44,6 +44,7 @@
         <li><a href="https://www.microsoft.com/en-us/hololens/" target="_blank" rel="noopener">Microsoft HoloLens 2</a>: Much more comfortable than the first one, with much better performance, though the graphical artifacts in the waveguide displays are quite distracting.</li>
         <li><a href="https://www.microsoft.com/en-us/p/microsoft-hololens-development-edition" target="_blank" rel="noopener">Microsoft HoloLens 1</a>: The device is starting to get a bit long-in-the-tooth, but I also think its capabilities have yet to be fully tapped in any extant applications. It's old (tech is at least 5 years old), and it's limited, but there isn't anything fundamentally broken in it, unlike the Magic Leap</li>
         <li><a href="https://www.apple.com/ipad-9.7/" target="_blank" rel="noopener">Apple iPad (2017) 9.7&quot;</a>: This is the current model of regular iPad, as of this writing. It comes with the A10 chipset, which is compatible with ARKit.</li>
+        <li><a href="https://www.tiltfive.com/" target="_blank" rel="noopener">Tile Five</a>: I was a KickStarter backer for this really interesting set of glasses that couple with a target tracking pad.</li>
     </ul>
 
     <h4>Other devices</h4>
@@ -55,11 +56,5 @@
         <li><a href="https://www.microsoft.com/en-us/p/azure-kinect-dk/" target="_blank" rel="noopener">Azure Kinect DK</a>: Depth+RGB camera data, though the package is significantly bigger than the Intel RealSense cameras (even if you combine the T265 and D435i into one box to have similar functionality).</li>
         <li><a href="https://en.wikipedia.org/wiki/Kinect#Kinect_for_Xbox_One_(2013)" target="_blank" rel="noopener">Kinect for Xbox One</a>: I have the V2 Kinect, with the necessary cables for attaching to a PC instead of an Xbox One.</li>
         <li><a href="https://en.wikipedia.org/wiki/Kinect#Kinect_for_Windows_(2012)" target="_blank" rel="noopener">Microsoft Kinect for Windows</a>: I have the V1 Kinect, with the necessary cables for attaching to a PC instead of an Xbox 360.</li>
-    </ul>
-
-    <h3>In process</h3>
-    <p>These are headsets that I've ordered and are just waiting to receive.</p>
-    <ul>
-        <li><a href="https://www.tiltfive.com/" target="_blank" rel="noopener">Tile Five</a>: I was a KickStarter backer for this really interesting set of glasses that couple with a target tracking pad. Judging from the development log, I should be getting my soon.
     </ul>
 </section>
