--- a/Personal Site/Pages/Shared/_Layout.cshtml
+++ b/Personal Site/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     var showMenu = (ViewData["HideMenu"] as bool?) != true;
     var keywords = ViewData["Keywords"] as string;
     var twitterCardType = screenshot is null ? "summary" : "summary_large_image";
+
+    if(screenshot is not null)
+    {
+        screenshot = "https://seanmcbeth.com" + screenshot;
+    }
 }
 <!DOCTYPE html>
 <html lang="en-us" prefix="og: http://ogp.me/ns#">
@@ -39,8 +44,8 @@
     }
     @if (screenshot is not null)
     {
-        <meta name="twitter:image" content="https://seanmcbeth.com/@screenshot">
-        <meta property="og:image" content="https://seanmcbeth.com/@screenshot">
+        <meta name="twitter:image" content="@screenshot">
+        <meta property="og:image" content="@screenshot">
         @if (description is not null)
         {
             <meta name="twitter:image:alt" content="@description">
