--- a/Personal Site/Pages/App.cshtml
+++ b/Personal Site/Pages/App.cshtml
@@ -9,17 +9,23 @@
 }
 
 @section Head {
+    @if (@Model.ScreenshotPath is not null)
+    {
+        <style>
+            body {
+            background: fixed center/cover url(@Model.ScreenshotPath);
+            }
+        </style>
+    }
     @if (Model.ManifestPath is not null)
     {
         <link rel="manifest" href="@Model.ManifestPath">
     }
-    <bundle-js name="three" versioned />
+    @if (!Model.SkipThreeJS)
+    {
+        <bundle-js name="three" versioned />
+    }
     <bundle-js name="@(Model.Name + "-app")" versioned />
-    <style>
-        body {
-            background: fixed center/cover url(@Model.ScreenshotPath);
-        }
-    </style>
 }
 
     @Html.AntiForgeryToken()
