--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -41,7 +41,11 @@
 
     @section Footer {
     <h2>Thanks for reading</h2>
-    <p>Thank you for reading my website. If you have any questions, please feel free to reach out to me. All of my contact information is available at the top of the site.</p>
+    <p>
+        Thank you for reading my website, v@(@Model.SiteVersion). 
+        If you have any questions, please feel free to reach out to me. 
+        All of my contact information is available at the top of the site.
+    </p>        
 }
 
     <img id="portrait"
