--- a/Personal Site/Pages/Status.cshtml
+++ b/Personal Site/Pages/Status.cshtml
@@ -1,5 +1,5 @@
 @page "{Code:int}"
-@model Yarrow.Pages.StatusModel
+@model SeanMcBeth.Pages.StatusModel
 @{
     ViewData["Title"] = $"Sean T. McBeth - {Model.Code}";
 }
